Kubernetes agent2 (#217)
* fix(*): 1. 合并代码， 2. 处理格式问题

* fix(*):1. 提升插件版本 2. 添加协议头

* fix(console):1. 设计 report 模块 2. 开 es，open模块，3. 开发 report 基本标准 4. 开发 iotdb模块

* fix(*):1. 保存更新，因为 rocketmq-exporter 官方文档 与 rocketmq-exporter 源码文档不一致，需要安装源码文档定义数据对象

* fix(console): 1. 完成 db cluster 关系 2. 两个数据 mock 模型

* fix(*):1. 完成 sync 模块集成测试 2. 重构 metadata 关系

* fix(*):1. check style

* fix(*) 1. 没有解决 地址 与 端口问题 2. 没有解决 自动化部署地址问题

* fix(*): 1. 解决冲突

* fix(*):1. 解决冲突

* fix(*):1. 解决样式问题

---------

Co-authored-by: jie <jie@apache.org>
Co-authored-by: jie@apache.org <2732554140@qq.com>